@@ -439,8 +439,12 @@ void network_info_parse(struct irc_network_info *info, const char *parameter)
 		g_free(info->statusmsg);
 		info->statusmsg = g_strdup(val);
 	} else if (!g_strcasecmp(key, "PREFIX")) {
-		g_free(info->prefix);
-		info->prefix = g_strdup(val);
+		if (val[0] != '(' || !strchr(val, ')')) {
+			log_global(LOG_WARNING, "Malformed PREFIX data `%s'", val);
+		} else {
+			g_free(info->prefix);
+			info->prefix = g_strdup(val);
+		}
 	} else if (!g_strcasecmp(key, "CHARSET")) {
 		g_free(info->charset);
 		info->charset = g_strdup(val);
